--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Messages]
-help = С помощью этого бота можно отслеживать сообщения интересующих Вас пользователей в десятке русскоязычных крипточатов. Подписавшись на тех, кто приносит альфу, Вы будете уверены, что не пропустите их сообщения. Таким образом можно получать своего рода выжимку из чатов и вообще не читать кучу флуда.
+info = С помощью этого бота можно отслеживать сообщения интересующих Вас пользователей в десятке русскоязычных крипточатов. Подписавшись на тех, кто приносит альфу, Вы будете уверены, что не пропустите их сообщения. Таким образом можно получать своего рода выжимку из чатов и вообще не читать кучу флуда.
 enter_username_add = Введите пользователя, чьи сообщения Вы хотите получать (в формате @ЯСамыйКрутойБот) или "отмена" для отмены ввода
 enter_username_del = Введите пользователя, чьи сообщения Вы больше не хотите получать (в формате @ЯСамыйКрутойБот) или "отмена" для отмены ввода
 start = Приветствую Вас. Теперь я буду пересылать все сообщения от пользователей, на которых Вы подпишетесь
